# Fitness_app

./: .gitignore  Makefile  TODO  manage.py  pyproject.toml  requirements.txt  setup_webhook.py
apps/: apps.py  click_merchant.py  forms.py  signals.py  tasks.py  urls.py  utils.py
apps/admin/: __init__.py  analytics.py  exercises.py  payments.py  users.py  workouts.py
apps/bot/: bot_view.py  utils.py
apps/fixtures/: edition.json  editionexercise.json  exercises.json  program.json  workout.json  workoutexercise.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  analytics.py  base.py  exercises.py  favorites.py  my_trainer.py  payments.py  users.py  workouts.py
apps/static/: animation.html
apps/views/: __init__.py  api_views.py  bot.py  bot_view.py  exercises.py  favorite.py  payments.py  users.py  workouts.py
root/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  eror_page.html  premium.html
templates/admin_page/: admin.html
templates/exercises/: body_parts.html  collection_detail.html  exercise_detail.html  exercise_list.html  favorites_list.html
templates/miniapp/: questionarrie.html
templates/my_trainer/: my_trainer.html  my_trainer_detail.html  my_trainer_history.html  workouts_detail.html
templates/users/: account_settings.html  add-card.html  cancel_subscription.html  change_information.html  language.html  manage_subscription.html  payment_history.html  premium.html  profile_detail.html  profile_form.html  profile_update.html  progress.html  restore_subscription.html  settings.html
(+19 files in other folders)
